--- a/contractor/package.json
+++ b/contractor/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "antd": "^5.17.3",
+    "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
