--- a/contractor/package.json
+++ b/contractor/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "antd": "^5.17.3",
+    "axios": "^1.7.2",
     "formik": "^2.4.6",
+    "json-server": "^1.0.0-beta.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
