--- a/contractor/package.json
+++ b/contractor/package.json
@@ -16,6 +16,7 @@
     "json-server": "^1.0.0-beta.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "styled-components": "^6.1.11",
     "yup": "^1.4.0"
