--- a/contractor/package.json
+++ b/contractor/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "antd": "^5.17.4",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "formik": "^2.4.6",
     "json-server": "^1.0.0-beta.0",
     "react": "^18.2.0",
